# sass

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .snyk  ACIS_CLAUDE_AI_INTEGRATION.md  ACIS_COMPLETE_SYSTEM_SUMMARY.md  ACIS_FINAL_IMPLEMENTATION.md  ACIS_GIT_HOOKS_INTEGRATION.md  ACIS_HOW_TO_USE.md  ACIS_IMPLEMENTATION_COMPLETE.md  AGENTS.md  API_DOCUMENTATION.md  API_DOCUMENTATION_SUMMARY.md  API_DOCUMENTATION_TEST_RESULTS.md  API_REFERENCE.md  API_TESTING_GUIDE.md  API_TEST_IMPLEMENTATION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  ARCHITECTURE_FIXES_IMPLEMENTATION_GUIDE.md  ARCHITECTURE_FIX_PLAN.md  AUDIT_IMPLEMENTATION_COMPLETE.md  AUDIT_LOG_INTEGRATION_PREVIEW.md  AUTH-MODULE-TEST-IMPLEMENTATION-COMPLETE.md  AUTOMATED_CONTINUOUS_IMPROVEMENT_SYSTEM.md  BUILD_SNAPSHOT.md  CI_CD_IMPLEMENTATION_GUIDE.md  CI_CD_SUMMARY.md  CLAUDE.md  CLEAN_CODE_ANALYSIS.md  CLEAN_CODE_ANALYSIS_REPORT.md  CLEAN_CODE_IMPLEMENTATION_REPORT.md  CLEAN_CODE_IMPROVEMENTS_IMPLEMENTATION_REPORT.md  CLEAN_CODE_PHASE_2_COMPLETE.md  CLEAN_CODE_REFACTORING_GUIDE.md  CLEAN_CODE_ROADMAP.md  CLEAN_CODE_SUMMARY.md  CODE_REVIEW_STANDARDS.md  COMPLETE-SESSION-SUMMARY.md  (+133 more)
tools/: README.md  pyproject.toml  requirements.txt
tools/agents/: documentation.py  task_coordination.py
tools/architecture/: module_boundaries.py
tools/events/: __init__.py  event_coordinator.py
tools/lib/docs-generator/: package.json
tools/lib/docs-validator/src/schemas/: page.ts  search.ts  (+2 more)
tools/sass_constitutional_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+3064 files in other folders)
